Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -93,9 +93,12 @@ header a {
   color:#FFF;
 }
 .search-form {
+  position:relative;
 }
 .search-form input:before {
-  float:left;
+  position:absolute;
+  left:0;
+  width:40px;
   content:"\f002"; /* search icon */
   font-family:FontAwesome;
 }
