--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -71,6 +71,7 @@ header a {
 header {
   background:url(../../../assets/images/3D-Printers-at-Chicago-Public-Library.jpg) center center no-repeat fixed;
   background-size:cover;  
+  height:20rem;
 }
 #logo-site-name {
   /*color:#000;*/
@@ -90,8 +91,8 @@ header {
 .logo a {
 }
 .logo img {
-  height:100px;
   vertical-align:middle;
+  padding:1rem;
 }
 #site-name a {
   color:#FFF;
