--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 	<body class="{{ page.body_class }}">
 	    <!-- div class="bc-widget bc-my-account-nav"></div -->
         <form class="search-form hide" action="{{ site.baseurl }}/search/" method="get">
-        	<input type="search" name="q" {% if include.add_id %}id="search-input"{% endif %} placeholder="Search..." autofocus>
+        	<input type="search" name="q" id="search-input" placeholder="Search..." autofocus>
         	<input type="submit" value="Search" style="display: none;">
         </form>   	          
         
