Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -116,12 +116,9 @@ header {
 }
 .search-form input:focus {
   border:none;
-  border-bottom:solid 5px #666;
-  background:#CFD8DC;
+  border-color:solid 1px #999;
 }
-.search-form input:focus::placeholder {
-  display:none;
-}
+
 .search-form.hide {
   display:none;  
 }
