--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -63,6 +63,11 @@
   background:#222;
 }
 
+nav .mobile-search-toggle {
+  background:transparent;
+  color:inherit;
+}
+
 .mobile-menu-icons {
   float:right;
 }
