--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -18,7 +18,7 @@
   /*display:inline;*/
 }  
 .menu li a {
-  margin:0;
+  margin:1rem;
   padding:0 2rem;
   display:block;
   vertical-align:middle;
