--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -18,7 +18,7 @@
   /*display:inline;*/
 }  
 .menu li a {
-  margin:1rem;
+  margin:0;
   padding:0 2rem;
   display:block;
   vertical-align:middle;
@@ -57,6 +57,7 @@
   display:inline-block;
   font-size:2.2rem;
   padding:10px 20px;
+  margin:1rem;
   z-index:101;
   cursor:pointer;
   color:#FFF;
