Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -70,7 +70,7 @@ nav .mobile-search-toggle {
 
 .mobile-menu-icons {
   float:right;
-  margin:2rem;
+  margin:2rem 1rem;
 }
 
 .mobile-menu-toggle.close {
