Updated '_layouts/sidebar.html' via CloudCannon

--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -60,7 +60,10 @@
 		<section id="container">
           <div class="inner">
             <div id="content" class="container-fluid">
-              {{ content }}
+              <div class="row">
+                <div class="col-sm-4"> js sidebar </div>
+                <div class="col-sm-8">{{ content }}</div>
+              </div>
             </div>
           </div>
 		</section>
