--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -61,8 +61,8 @@
           <div class="inner">
             <div id="content" class="container-fluid">
               <div class="row">
-                <div class="col-sm-4"> js sidebar </div>
-                <div class="col-sm-8">{{ content }}</div>
+                <div class="col-sm-2"><div class="js-populated jump-nav"></div></div>
+                <div class="col-sm-10">{{ content }}</div>
               </div>
             </div>
           </div>
