Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -108,21 +108,25 @@ nav.hide {
 /* jump-nav */
 .jump-nav {
   border-left:solid 5px #eee;
+  padding:20px;
 }
 
 .jump-nav h3 {
   text-transform:uppercase;
   color:#666;
-  font-size:14rem;
+  font-size:1rem;
 }
 .jump-nav ul {
   list-style:none;
   margin:0;
   padding:0;
 }
-.jump-nav li a {
+
+#content .jump-nav li a {
   color:#888;
   display:block;
+  border:none;
+  text-transform:uppercase;
 }
 .jump-nav li a:hover {
   color:#333;
