Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p class="copyright">&copy; {{ site.title }} {{ site.time | date: "%Y" }}. All rights reserved.</p>
+		<p class="copyright">{{ site.title }} {{ site.time | date: "%Y" }}. [Admin](https://app.cloudcannon.com/30680/editor#/site/82447/explore/_guides) </p>
 	</div>
 </footer>
