--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,6 +10,6 @@
 					{{ link.name }}</a></li>
 			{% endfor %}
 		</ul>
-		<p class="copyright">CPL Maker Lab | makerspace@chipublib.org | (312) 747-4300 | 400 S State St 3rd floor, Chicago, IL 60605 | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/_guides">Admin</a></p>
+		<p class="copyright">CPL Maker Lab {{ site.time | date: "%Y" }} | makerspace@chipublib.org | (312) 747-4300 | 400 S State St 3rd floor, Chicago, IL 60605 | <a target="_blank" href="https://app.cloudcannon.com/30680/editor#/site/82447/explore/_guides">Admin</a></p>
 	</div>
 </footer>
