Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
 		<section id="container">
           <div class="inner">
             <div id="content" class="container-fluid">
+              <h1>{{ page.title }}</h1>
               {{ content }}
             </div>
           </div>
