--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -2,7 +2,7 @@
 @media screen and (min-width:768px) {
 
   #content {
-    width:90%;
+    max-width:900px;
   }
   #logo-site-name {
     /*float:left;*/
