Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -107,8 +107,7 @@ nav.hide {
 
 /* jump-nav */
 .jump-nav {
-  border-left:solid 5px #eee;
-  padding:1rem;
+  border-left:solid 5px #ddd;
   background-color:#efefef;
 }
 
