--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -32,7 +32,7 @@
   		  {% endif %}
   		</li>
   	{% endfor %}
-  	<li><a class="mobile-search-toggle no-user-select"><i class="fa fa-search" aria-hidden="true"></i><span class="element-invisible">Search</span></a></li>
+  	<li class="hidden-xs"><a class="mobile-search-toggle no-user-select" ><i class="fa fa-search" aria-hidden="true"></i><span class="element-invisible">Search</span></a></li>
 	</ul>
 </nav>
 
