--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -21,19 +21,33 @@
   }
 
   .menu li {
-    display:inline;
+    display:inline-block;
+    position:relative;
   }
   .menu li a {
     display:inline-block;
     font-weight:normal;
     border:none;
     border-bottom:solid 3px transparent;
-    
   }
   .menu ul {
-    display:none;
+    visibility:hidden;
+    position:absolute;
+    transition: all 0.5s ease;
+    margin-top: 1rem;   
+  	left: 0;
+    display: none;  
   }
-  
+
+  .menu li:hover > ul,
+  .menu li:focus-within > ul,
+  .menu li ul:hover,
+  .menu li ul:focus {
+    visibility: visible;
+    opacity: 1;
+    display: block;
+  }
+
   
   
   
