--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -11,7 +11,7 @@
   nav, 
   nav.hide {
     display:block;
-    position:relative;
+    position:static;
     top:auto;
     bottom:auto;
     right:auto;
