--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -24,6 +24,7 @@
   .menu {
     white-space:normal;
     overflow-y:visible;
+    overflow-x:visible;
   }
   .menu li {
     display:inline-block;
@@ -40,6 +41,7 @@
     visibility:hidden;
     position:absolute;
     transition: all 0.5s ease;
+    margin:0;
     margin-top: 1rem;   
   	left: 0;
     display: none;  
