--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -26,12 +26,12 @@
     overflow-y:visible;
     overflow-x:visible;
   }
-  .menu li {
+  .menu > li {
     display:inline-block;
     position:relative;
     overflow-y:visible;
   }
-  .menu li a {
+  .menu > li a {
     display:inline-block;
     font-weight:normal;
     border:none;
@@ -41,6 +41,7 @@
     visibility:hidden;
     position:absolute;
     transition: all 0.5s ease;
+    min-width:1.5rem;
     margin:0;
   	left: 0;
     display: none;  
