--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -37,6 +37,9 @@
     border:none;
     border-bottom:solid 3px transparent;
   }
+  .menu li a:hover {
+    background:#ccc;
+  }  
   .menu ul {
     visibility:hidden;
     position:absolute;
