--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -18,6 +18,7 @@
     width:auto;
     background:rgba(255,255,255,1);
     overflow-y:visible;
+    visibility:visible;
   }
   .menu {
     white-space:normal;
