Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -55,6 +55,7 @@
   .menu li li a {
     padding:0 2rem;
     line-height:normal;
+    border-bottom:solid 1px #ededed;
   }
   .menu li li a:hover {
     background:#ccc;
