--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -55,6 +55,7 @@
   .menu li li a {
     padding:0 2rem;
     line-height:normal;
+    background:transparent;
   }
   .menu li li a:hover {
     background:#ccc;
