Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -58,7 +58,7 @@
     background:transparent;
   }
   .menu li li a:hover {
-    background:#ccc;
+    /*background:#ccc;*/
   }  
   .menu li:hover > ul,
   .menu li:focus-within > ul,
