--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -54,8 +54,9 @@
   }
   .menu li:hover li a,
   .menu li:focus-within li a {
-    display:inline-block;
-    margin:0 2rem;
+    display:block;
+    margin:0;
+    padding:0;
     line-height:normal;
     background:transparent;
   }
