--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -56,13 +56,9 @@
   .menu li:focus-within li a {
     display:block;
     margin:0;
-    padding:0;
+    padding:0 2rem;
     line-height:normal;
     background:transparent;
-  }
-  .menu li li a:hover,
-  .menu li li a:focus-within  {
-    background:#ccc;
   }
   .menu li:hover > ul,
   .menu li:focus-within > ul,
