--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -54,7 +54,7 @@
   }
   .menu li:hover li a,
   .menu li:focus-within li a {
-    display:inline-block;
+    display:block;
     margin:0;
     padding:0;
     line-height:normal;
@@ -63,6 +63,7 @@
   .menu li li a,
   .menu li li a  {
     display:block;
+    background:#ccc;
   }
 
   .menu li:hover > ul,
