--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -19,6 +19,7 @@
     background:rgba(255,255,255,1);
     overflow-y:visible;
     visibility:visible;
+    opacity:.9;
   }
   .menu {
     white-space:normal;
