Updated 'assets/css/theme/breakpoints.css' via CloudCannon

--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -24,7 +24,7 @@
     white-space:normal;
     overflow-y:visible;
     overflow-x:visible;
-    right:0;
+    float:right;
   }
   .menu li {
     display:inline-block;
