--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,34 +4,34 @@
   <a class="mobile-menu-toggle close no-user-select visible-xs"><i class="fa fa-close"><span class="element-invisible">Menu</span></i></a> 
 	<a class="editor-link btn" href="cloudcannon:collections/_data/navigation.yml" class="btn" style="padding: 5px;"><strong>&#9998;</strong> Edit navigation</a>
 	<ul id="main-menu" class="menu side-scroll">
-  	{% for link in site.data.navigation %}
-    	{% assign class = "" %}
-    	{% assign aria = "" %}
+  	{%- for link in site.data.navigation -%}
+    	{%- assign class = "" -%}
+    	{%- assign aria = "" -%}
   
-  		{% if link.link == page.url %}
-  			{% assign class = class | append: " active" %}
-  		{% endif %}
+  		{%- if link.link == page.url -%}
+  			{%- assign class = class | append: " active" -%}
+  		{%- endif -%}
   		
-      {% if link.subnav.size > 0 %}
-        {% assign aria = aria | append: "true" %}
-      {% endif %}
-  		
-  		<li><a href="{% include relative-src.html src=link.link %}" aria-haspopup="{{ aria }}" class="{{ class }}">{{ link.name }}</a>
+      {%- if link.subnav.size > 0 -%}
+        {%- assign aria = aria | append: "true" -%}
+      {%- endif -%}
+      
+  		<li><a href="{%- include relative-src.html src=link.link -%}" aria-haspopup="{{- aria -}}" class="{{- class -}}">{{- link.name -}}</a>
   		  {% if link.subnav.size > 0 %}
   		  <ul class="dropdown" aria-label="submenu">
-  		    {% for sublink in link.subnav}
-          {% assign subclass = "" %}
+  		    {%- for sublink in link.subnav -%}
+          {%- assign subclass = "" -%}
   
-      		{% if sublink.link == page.url %}
-      			{% assign subclass = subclass | append: " active" %}
-      		{% endif %}
+      		{%- if sublink.link == page.url -%}
+      			{%- assign subclass = subclass | append: " active" -%}
+      		{%- endif -%}
       
-         	<li><a href="{% include relative-src.html src=sublink.link %}" class="{{ subclass }}">{{ sublink.name }}</a>
-    		    {% endfor %}
+         	<li><a href="{%- include relative-src.html src=sublink.link -%}" class="{{- subclass -}}">{{- sublink.name -}}</a>
+    		    {%- endfor -%}
   		  </ul>
-  		  {% endif %}
+  		  {%- endif -%}
   		</li>
-  	{% endfor %}
+  	{%- endfor -%}
   	<li class="hidden-xs"><a class="mobile-search-toggle no-user-select" ><i class="fa fa-search" aria-hidden="true"></i><span class="element-invisible">Search</span></a></li>
 	</ul>
 </nav>
