--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -25,7 +25,7 @@
         		{%- if sublink.link == page.url -%}
         			{%- assign subclass = subclass | append: " active" -%}
         		{%- endif -%}
-            {%- if sublink.name > 0 -%}
+            {%- if sublink.name.size > 0 -%}
            	  <li><a href="{%- include relative-src.html src=sublink.link -%}" class="{{- subclass -}}">{{- sublink.name -}}</a>
            	{%- endif  -%}
     		  {%- endfor -%}
