--- a/assets/css/theme/breakpoints.css
+++ b/assets/css/theme/breakpoints.css
@@ -20,6 +20,7 @@
     background:rgba(255,255,255,1);
     overflow-y:visible;
     visibility:visible;
+    border:solid 1px #ededed;
   }
   .menu {
     white-space:normal;
