--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -106,7 +106,7 @@ header {
   border:none;
   border:solid 1px #666;
   color:#666;
-  border-radius:2px;
+  border-radius:5px;
   font-size:2.0rem;
   margin:1rem auto;
   width:90%;
@@ -115,8 +115,8 @@ header {
   font-style:italic;
 }
 .search-form input:focus {
-  border:none;
-  border-bottom:dotted 1px #ccc;
+  border:dotted 1px #ccc;
+  
 }
 
 .search-form.hide {
