Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -104,19 +104,19 @@ header {
 }
 .search-form input {
   border:none;
-  border:solid 1px #666;
+  border:dotted 1px #666;
   color:#666;
   border-radius:5px;
   font-size:2.0rem;
-  margin:1rem auto;
+  margin:1rem auto; 
   width:90%;
+  background-color:#ddd;
 }
 .search-form input::placeholder {
   font-style:italic;
 }
 .search-form input:focus {
-  border:dotted 1px #ccc;
-  
+  border:solid 1px #ccc;
 }
 
 .search-form.hide {
