Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -110,7 +110,7 @@ header {
   font-size:2.0rem;
   margin:1rem auto; 
   width:90%;
-  background-color:#ddd;
+  background-color:#eee;
 }
 .search-form input::placeholder {
   font-style:italic;
