Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,14 +46,14 @@
       
     {% include navigation.html %} 	
         
-    <header id="header" style="background-url:{{ site.baseurl }}/{{site.data.images.header}}">       
+    <header id="header" style="background-url:{{ site.baseurl }}/{{site.data.images.header_image}}">       
       <div class="mobile-menu-icons visible-xs">
         <a class="mobile-search-toggle no-user-select"><i class="fa fa-search"><span class="element-invisible">Search</span></i></a> 
         <a class="mobile-menu-toggle no-user-select"><i class="fa fa-bars"><span class="element-invisible">Menu</span></i></a> 
       </div>
       
       <section id="logo-site-name">
-        <div class="logo"><a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{ site.baseurl }}/{{site.data.images.logo}}" /></a></div>
+        <div class="logo"><a href="{{ site.baseurl }}/"><img alt="logo" title="Logo" src="{{ site.baseurl }}/{{site.data.images.logo_image}}" /></a></div>
       </section>
     </header>
         
