--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,8 +45,11 @@
     </form>   	          
       
     {% include navigation.html %} 	
-        
-    <header id="header" style="background-url:{{site.data.images.header_image}}">       
+    {% assign header_image = site.data.images.header_image %}    
+    {% if page.header_image %}
+      {% header_image = page.header_image %}
+    {% endif %}
+    <header id="header" style="background-image:url({{site.data.images.header_image}})">       
       <div class="mobile-menu-icons visible-xs">
         <a class="mobile-search-toggle no-user-select"><i class="fa fa-search"><span class="element-invisible">Search</span></i></a> 
         <a class="mobile-menu-toggle no-user-select"><i class="fa fa-bars"><span class="element-invisible">Menu</span></i></a> 
