--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -69,7 +69,7 @@ header a {
   /*color:#cfd2da;*/
 }
 header {
-  background:url(../../../assets/images/header-bg.jpg) #333 center center no-repeat fixed;
+  background:url(../../../assets/images/header-bg.jpg) #333 left center no-repeat fixed;
   background-size:cover;  
   min-height:20rem;
 }
