Updated 'assets/css/components/menus.css' via CloudCannon

--- a/assets/css/components/menus.css
+++ b/assets/css/components/menus.css
@@ -113,7 +113,7 @@ nav.hide {
 /* colors: https://www.materialui.co/colors */
 .jump-nav {
   border-top:solid 5px #1E88E5;
-  background-color:#B0BEC5;
+  background-color:#ECEFF1;
   padding:15px;
 }
 
