Updated 'assets/css/theme/theme.css' via CloudCannon

--- a/assets/css/theme/theme.css
+++ b/assets/css/theme/theme.css
@@ -69,7 +69,8 @@ header a {
   /*color:#cfd2da;*/
 }
 header {
-  background:url(../../../assets/images/header-bg.jpg) #333 left center no-repeat;
+  /*background:url(../../../assets/images/header-bg.jpg) #333 left center no-repeat fixed;*/
+  background:url(../../../assets/images/header-bg.jpg) #333 no-repeat;
   background-size:cover;  
   min-height:20rem;
 }
