Updated 'assets/css/components/images.css' via CloudCannon

--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -1,4 +1,11 @@
 img {
   max-width:100%;
   height:auto;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+iframe, img {
+  margin-left:auto;
+  margin-right:auto;
 }
