--- a/assets/css/components/images.css
+++ b/assets/css/components/images.css
@@ -1,11 +1,8 @@
 img {
   max-width:100%;
   height:auto;
-  margin-left:auto;
-  margin-right:auto;
 }
 
-iframe, img {
-  margin-left:auto;
-  margin-right:auto;
+iframe {
+  width:100%;
 }
