--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -17,7 +17,7 @@ layout: default
 <span>
   {% for tag in page.tags %}
     {% capture tag_name %}{{ tag }}{% endcapture %}
-    <a href="/tags#{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+    <a href="/tags#{{ tag_name }}">{{ tag_name }}</a> 
   {% endfor %}
 </span>
 
