Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -7,7 +7,7 @@ layout: default
   </div>
   <div class="col-sm-8">
     <div class="guide-helper">
-      <i class="fa fa-thermometer" aria-hidden="true"></i> Difficulty: {{ page.difficulty }}
+      <i class="fa fa-bolt" aria-hidden="true"></i> Difficulty: {{ page.difficulty }}
       <br/>
       <i class="fa fa-clock-o" aria-hidden="true"></i> Time Required:  {{ page.time_required }}
     </div>
