Updated '_layouts/guide.html' via CloudCannon

--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -14,13 +14,11 @@ layout: default
   </div>
 </div>
 
-<span>
+{{ content }}
+
+Tags: <span>
   {% for tag in page.tags %}
     {% capture tag_name %}{{ tag }}{% endcapture %}
     <a href="/tags#{{ tag_name }}">{{ tag_name }}</a> 
   {% endfor %}
 </span>
-
-
-
-{{ content }}
