--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -6,11 +6,10 @@ layout: default
     <img src="{{ page.example_image }}">
   </div>
   <div class="col-sm-8">
-    <div class="guide-helper">
-      <i class="fa fa-bolt" aria-hidden="true"></i> Difficulty: {{ page.difficulty }}
-      <br/>
-      <i class="fa fa-clock-o" aria-hidden="true"></i> Time Required:  {{ page.time_required }}
-    </div>
+    <ul class="guide-summary">
+      <li><i class="fa fa-bolt" aria-hidden="true"></i><label>Difficulty:</label> {{ page.difficulty }}</li>
+      <li><i class="fa fa-clock-o" aria-hidden="true"></i> <label>Time required:</label>  {{ page.time_required }}</li>
+    </ul>
   </div>
 </div>
 
