--- a/_layouts/guide.html
+++ b/_layouts/guide.html
@@ -9,10 +9,10 @@ layout: default
   <div class="col-sm-6">
     <ul class="guide-summary">
       {% if page.difficulty %}
-        <li><i class="fa fa-bolt" aria-hidden="true"></i><label>Difficulty:</label> {{ page.difficulty }}</li>
+        <li><i class="fa fa-bolt" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
       {% endif %}
       {% if page.difficulty %}
-        <li><i class="fa fa-clock-o" aria-hidden="true"></i> <label>Time required:</label>  {{ page.time_required }}</li>
+        <li><i class="fa fa-clock-o" aria-hidden="true"></i> <span class="label">Time required:</span>{{ page.time_required }}</li>
       {% endif %}
     </ul>
   </div>
@@ -20,10 +20,10 @@ layout: default
 {% elsif page.difficulty or page.time_required %}
 <ul class="guide-summary">
   {% if page.difficulty %}
-    <li><i class="fa fa-bolt" aria-hidden="true"></i><label>Difficulty:</label> {{ page.difficulty }}</li>
+    <li><i class="fa fa-bolt" aria-hidden="true"></i><span class="label">Difficulty:</span> {{ page.difficulty }}</li>
   {% endif %}
   {% if page.time_required %}
-    <li><i class="fa fa-clock-o" aria-hidden="true"></i> <label>Time required:</label>  {{ page.time_required }}</li>
+    <li><i class="fa fa-clock-o" aria-hidden="true"></i> <span class="label">Time required:</span>  {{ page.time_required }}</li>
   {% endif %}
 </ul>
 {% endif %}
